# gif_me

./: CMakeLists.txt  Doxyfile  README.md
html/: annotated.html  classKonstantIMP_1_1application__extension-members.html  classKonstantIMP_1_1application__extension.html  classKonstantIMP_1_1comment__extension-members.html  classKonstantIMP_1_1comment__extension.html  classKonstantIMP_1_1gif__decoder-members.html  classKonstantIMP_1_1gif__decoder.html  classKonstantIMP_1_1gif__extension-members.html  classKonstantIMP_1_1gif__extension.html  classKonstantIMP_1_1gif__frame-members.html  classKonstantIMP_1_1gif__frame.html  classKonstantIMP_1_1graphic__extension-members.html  classKonstantIMP_1_1graphic__extension.html  classKonstantIMP_1_1plaintext__extension-members.html  classKonstantIMP_1_1plaintext__extension.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  gif__decoder_8hpp.html  gif__decoder_8hpp_source.html  gif__defines_8hpp.html  gif__defines_8hpp_source.html  hierarchy.html  index.html  menudata.js  structKonstantIMP_1_1frame__descriptor-members.html  structKonstantIMP_1_1frame__descriptor.html  structKonstantIMP_1_1gif__header-members.html  structKonstantIMP_1_1gif__header.html  structKonstantIMP_1_1rgba__color-members.html  structKonstantIMP_1_1rgba__color.html
include/: gif_decoder.hpp  gif_defines.hpp  gif_extension.hpp  gif_frame.hpp  gif_me.hpp  gif_parser.hpp
src/: gif_decoder.cpp  gif_extension.cpp  gif_frame.cpp  gif_parser.cpp  (+1 more)
(+62 files in other folders)
